--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@edgarjeremy/sirius.adapter": "^1.0.25",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,10 +13,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.1",
+    "konva": "^8.1.1",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
+    "react-konva": "^17.0.2-5",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "rsuite": "^4.10.2",
     "typescript": "^4.1.2",
+    "use-image": "^1.0.8",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -39,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-color": "^3.0.5",
+    "@types/react-router-dom": "^5.1.8"
   }
 }
