--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "file-saver": "^2.0.5",
     "konva": "^8.1.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.3",
     "@types/react-color": "^3.0.5",
     "@types/react-router-dom": "^5.1.8"
   }
